--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import "tailwindcss";
+
 .skills>ul {
   display: flex;
   flex-direction: row;
@@ -18,4 +20,8 @@
 .skill-card>img {
   width: 50px;
   height: 50px;
+}
+
+html {
+  margin: 0;
 }
