--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,27 @@
 @import "tailwindcss";
 @plugin "@midudev/tailwind-animations";
+
+@font-face {
+  font-family: "pixelify" ;
+  src: url(./assets/fonts/PixelifySans-VariableFont_wght.woff);
+}
+
+@font-face {
+  font-family: "silkscreen" ;
+  src: url(./assets/fonts/Silkscreen-Regular.woff);
+}
+
+@font-face {
+  font-family: "silkscreen" ;
+  src: url(./assets/fonts/Silkscreen-Bold.woff);
+  font-weight: bold;
+}
+
+@font-face {
+  font-family: "VT323" ;
+  src: url(./assets/fonts/VT323-Regular.woff);
+}
+
 html {
   margin: 0;
 }
@@ -12,23 +34,9 @@ nav {
   animation-range: 0 900px;
 }
 
-nav a:hover {
-  animation: blur-and-invert-hover linear both;
-  animation-timeline: scroll(root block);
-  animation-range: 0 300px;
-}
-
 @keyframes blur-and-invert {
   to {
-    background: rgba(58, 212, 181, 0.5);
+    background: rgba(211, 143, 234, 0.5);
     backdrop-filter: blur(5px);
-    color: var(--color-teal-950)
-  }
-}
-
-@keyframes blur-and-invert-hover {
-  to {
-    border-color: var(--color-gray-800);
-    color:var(--color-gray-900)
   }
 }
